# jsonsubschema

./: .gitignore  BENCHMARK.md  benchmark.py
jsonsubschema/: __init__.py  _canonicalization.py  _checkers.py  _constants.py  _explain.py  _utils.py  api.py  cli.py
rust/: Cargo.toml
rust/src/: dfa.rs  lib.rs
test/: test_array.py  test_cli.py  test_const.py  test_diff.py  test_draft07.py  test_edge_cases.py  test_enum.py  test_exceptions.py  test_explain.py  test_nontrivial.py  test_number_float.py  test_numeric.py  test_pattern_properties.py  test_performance.py
